hooked up api to html

--- a/css/index.css
+++ b/css/index.css
@@ -11,3 +11,27 @@ body{
     margin: 0;
     padding: 0;
 }
+
+#map {
+    height: 300px;
+    width: 300px;
+}
+
+.container{
+    max-width: 317px;
+    margin:10px;
+}
+
+.match-list{
+    background-color: rgba(199, 197, 197, 0.5);
+    color: black;
+    font-family: BlinkMacSystemFont, -apple-system, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
+
+
+.match-list > div:hover{
+    background-color:rgba(0,209,178,0.9);
+    cursor: pointer;
+    border-radius:5px;
+}
