--- a/css/index.css
+++ b/css/index.css
@@ -206,6 +206,18 @@ a:hover {
     text-align: right;
 }
 
+.jumbotron {
+    background-image : url(../images/Logo-Global-Snake2.png);
+    background-position: center;
+    background-color: rgb(32, 31, 31);
+    background-repeat : no-repeat;
+    background-size: contain;
+}
+
+.btn {
+    color: rgb(145, 223, 117);
+}
+
 /*
  * Footer
  */
