--- a/css/index.css
+++ b/css/index.css
@@ -139,13 +139,23 @@ a:hover {
 }
 
 .hero-img{
-    background-image: url('../images/138.jpeg');
+    background-image: url('../images/globe.jpeg');
     background-position: center;
     background-size: cover;
     border-radius: 0.3rem;
+    display: flex;
     height: 400px;
+    justify-content: center;
+    align-items: center;
     padding: 2rem 1rem;
     margin-bottom: 2rem;
+}
+
+#lead {
+    font-size: 3rem;
+    color: rgb(145, 223, 117);
+    font-weight: 400;
+    margin-bottom: 30px;
 }
 .hero-img2{
     background-image: url('../images/h-town.jpg');
@@ -166,6 +176,7 @@ a:hover {
 .map {
     height: 250px;
     width: 100%;
+    padding-bottom: 1.5rem;
 }
 
 .flag {
@@ -231,4 +242,12 @@ a:hover {
 .snakeButton{
     background-color: rgb(145, 223, 117);
     border-radius: .3rem;
+}
+
+.card {
+    background-color: #333;
+}
+.card-body {
+    display: flex;
+    justify-content: center;
 }
