--- a/css/index.css
+++ b/css/index.css
@@ -25,6 +25,10 @@ body {
     padding: 0;
 }
 
+li{
+    text-align: left;
+}
+
 /* Links/Actions */
 a,
 a:focus,
@@ -181,6 +185,9 @@ a:hover {
     text-align: right;
 }
 
+.hide{
+    display: none;
+}
 
 
 /*
