--- a/css/about_us.css
+++ b/css/about_us.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
     color: #fff;
     display: -ms-flexbox;
     display: flex;
@@ -31,6 +31,7 @@ body {
 .bio{
     margin-bottom: .25rem;
 }
+
 
 
 /* Links/Actions */
@@ -54,6 +55,14 @@ a:hover {
 
 .btn {
     color: rgb(145, 223, 117);
+
+}
+
+.biobtn {
+    width: 120px;
+    position: center;
+    margin-left: 41%;
+    margin-right: auto;
 }
 
 .snakeButton{
