--- a/css/about_us.css
+++ b/css/about_us.css
@@ -32,7 +32,13 @@ body {
     margin-bottom: .25rem;
 }
 
-
+.biobtn {
+    width: 120px;
+    position: center;
+    margin-left: 41%;
+    margin-right: auto;
+    
+}
 
 /* Links/Actions */
 a,
@@ -56,6 +62,10 @@ a:hover {
 .btn {
     color: rgb(145, 223, 117);
 
+}
+
+li {
+    text-align: left;
 }
 
 .snakeButton{
