--- a/css/mappage.css
+++ b/css/mappage.css
@@ -31,7 +31,11 @@ li{
 li.none{
     list-style-type: none;
 }
-
+/* For Hero Text bg */
+.backdrop{
+    background-color:rgba(49,49,49,0.65);
+    border-radius:5px;
+}
 
 /* Links/Actions */
 a,
