--- a/css/mappage.css
+++ b/css/mappage.css
@@ -9,21 +9,23 @@
  * Base structure
  */
 html,
-body {
+body, .wrapper {
     font-size: 16px;
     height: 100%;
     background-color: rgb(32, 31, 31);
 }
 
 body {
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
     color: #fff;
     display: -ms-flexbox;
     display: flex;
     font-size: 1rem;
     margin: 0;
     padding: 0;
+    overflow: auto;
 }
+
 
 li{
     text-align: left;
