--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ body {
 }
 
 body {
-    box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5);
+    /* box-shadow: inset 0 0 5rem rgba(0, 0, 0, .5); */
     color: #fff;
     display: -ms-flexbox;
     display: flex;
